added form to add a new library

--- a/libraryproject/libraryapp/templates/books/list.html
+++ b/libraryproject/libraryapp/templates/books/list.html
@@ -9,6 +9,7 @@
     <h1>Books</h1>
 
     <ol>
+    <! all_books references key in views - books - list.py >
     {% for book in all_books %}
         <li>
             {{ book.title }}
